# RAG-QA-pipeline-GCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.collector  Dockerfile.indexer  Dockerfile.ui  LICENSE  README.md  pyproject.toml  run_api.sh
.github/workflows/: ci.yml  deploy-airflow.yml  deploy-api.yml  deploy-jobs.yml  deploy-ui.yml
.streamlit/: config.toml
airflow/: airflow.cfg.override  requirements-airflow.txt  setup-vm.sh
config/: env_bootstrap.py  models.py  policy_sources.py  settings.py
dags/: dag_collect_index.py  dag_evaluation.py  dag_qa_generation.py
dags/utils/: __init__.py  cloud_run.py  notifications.py
data/eval/: qa_pairs.json
docs/: gcp_implementation_todo.md  multi-cloud.md  multicloud_architecture_summary.md  phase6_runbook.md  plan.md  qa-dataset-guide.md  rag-qa-pipeline-multicloud.drawio  rag-qa-pipeline.drawio
infra/: ar-cleanup-policy.json
infra/grafana/: rag-dashboard.json
prompts/: qa_generation_system.txt
scripts/: collect_policies.py  collect_youthgo_sample.py  generate_qa.py  run_phase6_experiments.py  setup_grafana.sh  setup_uptime_check.sh  sync_gcs_assets_to_mongo.py  upload_qa_to_mongo.py  verify_data_portal_api.py  verify_ragas_v04.py
src/api/: auth.py  cloud_run.py  costs.py  deps.py  errors.py  logging_config.py  (+5 more)
tests/: conftest.py  test_api.py  test_collectors.py  test_evaluation.py  test_gcs_client.py  test_generate_qa.py  test_generation.py  test_ingestion.py  test_logging_config.py  test_phase6_utils.py  test_pipeline.py  test_policy_store.py  test_retrieval.py  test_ui.py
(+53 files in other folders)
